<resources>
    <string name="app_name">krenwk</string>
    <string name="nav_uni">Unified</string>
    <string name="nav_etp">Video</string>
    <string name="nav_near">Nearby</string>
    <string name="nav_new">News</string>
    <string name="nav_mor">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_ser">Search</string>
    <string name="title_activity_maps">Map</string>

    <string name="draw_uni">Unified Communication</string>
    <string name="draw_ent">Enterprise Directory</string>
    <string name="draw_near">Nearby Services</string>
    <string name="draw_vid">Video Enterprise</string>
    <string name="draw_news">News</string>
    <string name="draw_more">More</string>

    <string name="Open">open_drawer</string>
    <string name="Close">close_drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Kren Work Project</string>
    <string name="nav_header_subtitle">krenwork@kren.com</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message"></string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="add_photo_button">Add Photo</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_delete_all">Delete All Contacts</string>
    <string name="editor_insert_contact_successful">New contact saved</string>
    <string name="editor_insert_contact_error">Error with saving contact</string>
    <string name="editor_update_contact_successful">Contact updated</string>
    <string name="editor_update_contact_error">Error with updating contact</string>
    <string name="editor_delete_contact_successful">Contact deleted</string>
    <string name="editor_delete_contact_error">Error with deleting contact</string>
    <string name="editor_title_add_contact">Add a contact</string>
    <string name="editor_title_edit_contact">Edit contact</string>
    <string name="editor_unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="editor_discard">Discard</string>
    <string name="editor_keep_editing">Keep Editing</string>
    <string name="empty_title_text">No Contacts</string>
    <string name="empty_subtitle_text">Create a new contact by clicking the + button below</string>

    <string name="delete_dialog_msg">Delete this contact?</string>
    <string name="delete_all_dialog_msg">Delete all contacts?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>
