<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_unified"
        android:icon="@drawable/ic_action_uni"
        android:title="@string/draw_uni" />
    <item
        android:id="@+id/drawer_enterprise"
        android:icon="@drawable/ic_action_dir"
        android:title="@string/draw_ent" />
    <item
        android:id="@+id/drawer_video"
        android:icon="@drawable/ic_action_video"
        android:title="@string/draw_vid" />
    <item
        android:id="@+id/drawer_near"
        android:icon="@drawable/ic_action_near"
        android:title="@string/draw_near" />
    <item
        android:id="@+id/drawer_news"
        android:icon="@drawable/ic_action_news"
        android:title="@string/draw_news" />
    <item
        android:id="@+id/drawer_more"
        android:icon="@drawable/ic_action_more"
        android:title="@string/draw_more" />
</menu>