<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_uni"
        android:icon="@drawable/ic_action_uni"
        android:title="@string/nav_uni"
        />

    <item
        android:id="@+id/action_video"
        android:icon="@drawable/ic_action_video"
        android:title="@string/nav_etp"
        />
    <item
        android:id="@+id/action_near"
        android:icon="@drawable/ic_action_near"
        android:title="@string/nav_near"
        />
    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_action_news"
        android:title="@string/nav_new"
        />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_more"
        android:title="@string/nav_mor"
        />

    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:icon="@drawable/ic_action_search"-->
        <!--android:title="Search"-->
        <!--app:showAsAction="always" />-->

</menu>